# webapp-deploy-template

./: .gitattributes  README.md  docker-compose.yml
client/: .env.sample.production  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
client/src/api/: surveys.ts
client/src/components/NavBar/: NavBar.tsx
client/src/lib/http/: client.ts
client/src/pages/: Home.tsx  Result.tsx  Survey.tsx
db/postgres/init.d/: 01_create_api_user.sql  02_create_survey_table.sql
server/: .env  .gitignore  Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt
server/src/: db.py  main.py
server/src/cruds/: survey.py
server/src/models/: survey.py
server/src/routers/: survey.py
server/src/schemas/: survey.py
